--- a/portfolio 2.css
+++ b/portfolio 2.css
@@ -498,7 +498,7 @@ footer {
     /* Adjust styles for the welcome section on smaller screens *//* This is the hamburger menu button */
   .nav-toggle {
     display: block; /* Show the button on mobile */
-    position: absolute;
+    position: fixed;
     top: 20px;
     right: 20px;
     z-index: 1001; /* Make sure it's on top of the nav */
@@ -537,12 +537,13 @@ footer {
 
   /* Style the navigation menu itself for mobile */
   .container {
-    background-color: #1a2037;
+    background-color: #96a4d3;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100% auto;
+    max-height: 25vh;
     /* Use transform to slide the menu in from the top */
     transform: translateY(-100%);
     transition: transform 0.3s ease-in-out;
@@ -623,3 +624,4 @@ footer {
 
 
 }
+
