--- a/portfolio 2.css
+++ b/portfolio 2.css
@@ -538,11 +538,12 @@ footer {
   /* Style the navigation menu itself for mobile */
   .container {
     background-color: #96a4d3;
+    color: #242948;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100% auto;
+    height: 100%;
     max-height: 25vh;
     /* Use transform to slide the menu in from the top */
     transform: translateY(-100%);
@@ -624,4 +625,5 @@ footer {
 
 
 }
+
 
